test/schemas/invalid_parser/duplicate_id.blink
FirstMsg/1
SecondMsg/1
